# SDL_modelloader

./: .gitmodules  CMakeLists.txt  TODO.txt  database.cpp  database.hpp  e_mob.cpp  level.cpp  level.hpp  main.cpp  renderer.cpp  renderer.hpp  spritesheet.xcf  tile.cpp  tile.hpp
include/: buffer.hpp  camera.hpp  components.hpp  config.hpp  database.hpp  dynamic_gpu_buffer.hpp  entity.hpp  gpu_loaders.hpp  gpu_obj_model.hpp  graphics.hpp  item.hpp  loaders.hpp  math.hpp  model.hpp  noise.hpp  packed_vertex.hpp  renderer.hpp  serializer.hpp  tile.hpp  uuid.hpp  voxel.hpp  world.hpp
include/entity/: drop.hpp  mob.hpp  player.hpp
lib/imgui/: CMakeLists.txt
lib/stb/: stb.c
models/: dirt.vox  grass.vox  invalid.mtl  invalid.vox  sand.vox  tree.vox  water.vox
res/models/: dirt_00.mtl  dirt_00.vox  grass_00.mtl  player_00.mtl  sand_00.mtl  tree_00.mtl  tree_00.vox  water_00.mtl
res/shaders/: composite.frag  mesh.frag  mesh.glsl  mesh.vert
shaders/: composite.frag  model.frag  model.glsl  model.vert  sampler.comp  voxel.glsl
src/: buffer.c  buffer.h  camera.cpp  components.cpp  data.c  data.h  database.cpp  db.c  db.h  dbg.c  dbg.h  entity.c  entity.cpp  entity.h  gfx.c  gfx.h  gpu.c  gpu_loaders.cpp  gpu_obj_model.cpp  graphics.cpp  item.cpp  level.c  level.h  loaders.cpp  main.c  main.cpp  math_ex.c  math_ex.h  mesh.c  mesh.h  mlib.c  mlib.h  model.cpp  noise.cpp  packed_vertex.cpp  render.cpp  render.hpp  renderer.cpp  tile.cpp  tile.h  (+4 more)
src/e/: item.c  item.h  mob.c  mob.h  player.c  player.h
src/entity/: drop.cpp  mob.cpp  player.cpp
